[gd_scene load_steps=82 format=2]

[ext_resource path="res://content/monster/diver/sheet.png" type="Texture" id=1]
[ext_resource path="res://content/sounds/monster/diver/DiverDive_v2.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/monster/diver/DiverRetreatt.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/diver/DiverAnnounce_v2.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/diver/DiverHit.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/diver/DiverDie_v2.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/sounds/monster/diver/DrillerImpact.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/diver/Diver_Flap.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/diver/Diver_loosensUp.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/diver/Diver_Flap_2.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/diver/Diver_Flap_1.wav" type="AudioStream" id=12]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=13]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=16]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=19]
[ext_resource path="res://content/monster/diver/Diver.gd" type="Script" id=21]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=43]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 243, 104, 81 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 312, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 416, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 520, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 624, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 728, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 936, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 312, 0, 104, 81 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 312, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 416, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 520, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 624, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 728, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 832, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 936, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 1040, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 1144, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 1248, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 1352, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 1456, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 1560, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 1664, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 1768, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 1872, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 1976, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 2080, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 2184, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 2288, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 2392, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 2496, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 0, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 104, 405, 104, 81 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 208, 405, 104, 81 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "dive",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": false,
"name": "dive_out",
"speed": 10.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "dive_in",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 104, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 208, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 312, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 416, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 520, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 624, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 728, 162, 104, 81 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 624, 81, 104, 81 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 86 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 104, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 208, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 312, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 416, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 520, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 624, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 728, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 832, 324, 104, 81 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 832, 162, 104, 81 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 87 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[node name="Diver" type="Area2D" groups=["monster"]]
z_index = 1
collision_layer = 128
collision_mask = 0
script = ExtResource( 21 )
techId = "diver"

[node name="HitboxDefault" type="CollisionPolygon2D" parent="."]
position = Vector2( -27, -33 )
polygon = PoolVector2Array( -1, -3, 22, 22, 32, 27, 5, 39, 8, 26 )

[node name="HitboxDive" type="CollisionPolygon2D" parent="."]
position = Vector2( -14, -20 )
polygon = PoolVector2Array( 21, 28, -2, -14, -18, -3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 43 )
position = Vector2( -6, -3 )
frames = SubResource( 4 )
animation = "fly"

[node name="DiveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.46
bus = "World"
script = ExtResource( 13 )

[node name="FlapSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.916
pitch_scale = 1.07
bus = "World"
script = ExtResource( 13 )
maxAudibleDistance = 400.0
minAudibleDistance = 30.0
streams = [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ) ]

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.868
pitch_scale = 1.57
bus = "World"

[node name="DieSoundDive" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = -3.496
pitch_scale = 1.38
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="DieSoundFly" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = 8.504
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="RetreatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 9.0
pitch_scale = 1.78
bus = "World"

[node name="AnnounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.785
pitch_scale = 0.8
bus = "World"
script = ExtResource( 13 )

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 3.271
pitch_scale = 1.3
bus = "World"
script = ExtResource( 13 )

[node name="LiftSound" type="AudioStreamPlayer" parent="."]
volume_db = 8.952
pitch_scale = 1.3
bus = "World"
script = ExtResource( 13 )
streams = [ ExtResource( 10 ) ]

[node name="DeathFly" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -6, 0 )
frames = SubResource( 5 )

[node name="StunSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 14 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 16 ) ]

[node name="DeathDive" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -6, -3 )
frames = SubResource( 6 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="animation_finished" from="DeathFly" to="." method="_on_Death_animation_finished"]
[connection signal="animation_finished" from="DeathDive" to="." method="_on_Death_animation_finished"]
